force-app/main/default/objects/simpli_lv__List_View_Action__c/simpli_lv__List_View_Action__c.object-meta.xml
<CustomObject>
    <label>List View Action</label>
    <nameField>
        <displayFormat>LVA-{0}</displayFormat>
        <label>List View Action Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>List View Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>