force-app/main/default/objects/simpli_lv__List_View_Action__c/fields/simpli_lv__Apex_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>simpli_lv__Apex_Class_Name__c</fullName>
    <description>The apex class that this action calls. The apex class must implement the SimpliListViewsAction interface.</description>
    <inlineHelpText>The apex class that this action calls. The apex class must implement the SimpliListViewsAction interface.</inlineHelpText>
    <label>Apex Class Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>