force-app/main/default/objects/simpli_lv__List_View_Action__c/fields/simpli_lv__Component_Name__c.field-meta.xml
<CustomField>
    <fullName>simpli_lv__Component_Name__c</fullName>
    <description>If the action is to be specific to an LWC component this holds that component name. If this field is blank then the action is available for all components.</description>
    <inlineHelpText>If the action is to be specific to an LWC component this holds that component name. If this field is blank then the action is available for all components.</inlineHelpText>
    <label>Component Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>