force-app/main/default/objects/simpli_lv__List_View_Action__c/fields/simpli_lv__Flow_API_Name__c.field-meta.xml
<CustomField>
    <fullName>simpli_lv__Flow_API_Name__c</fullName>
    <label>Flow API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>