force-app/main/default/objects/simpli_lv__List_View_Action__c/fields/simpli_lv__Flow_Frame_Height__c.field-meta.xml
<CustomField>
    <fullName>simpli_lv__Flow_Frame_Height__c</fullName>
    <label>Flow Frame Height</label>
    <length>6</length>
    <type>Text</type>
</CustomField>