force-app/main/default/objects/simpli_lv__List_View_Action__c/fields/simpli_lv__Flow_Type__c.field-meta.xml
<CustomField>
    <fullName>simpli_lv__Flow_Type__c</fullName>
    <label>Flow Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Autolaunched Flow</fullName>
            </value>
            <value>
                <fullName>Screen Flow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>