force-app/main/default/objects/simpli_lv__List_View_Action__c/fields/simpli_lv__Is_Active__c.field-meta.xml
<CustomField>
    <fullName>simpli_lv__Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>