force-app/main/default/objects/simpli_lv__List_View_Action__c/fields/simpli_lv__Is_Flow__c.field-meta.xml
<CustomField>
    <fullName>simpli_lv__Is_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Flow</label>
    <type>Checkbox</type>
</CustomField>