force-app/main/default/objects/simpli_lv__List_View_Action__c/fields/simpli_lv__Is_Hyperlink__c.field-meta.xml
<CustomField>
    <fullName>simpli_lv__Is_Hyperlink__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies whether this action is a hyperlink. If this is checked an action parameter named &quot;URL&quot; must exist identifying the location that the user is sent to.</description>
    <inlineHelpText>Identifies whether this action is a hyperlink. If this is checked an action parameter named &quot;URL&quot; must exist identifying the location that the user is sent to.</inlineHelpText>
    <label>Is Hyperlink</label>
    <type>Checkbox</type>
</CustomField>