force-app/main/default/objects/simpli_lv__List_View_Action__c/fields/simpli_lv__Label__c.field-meta.xml
<CustomField>
    <fullName>simpli_lv__Label__c</fullName>
    <description>The label that is shown in the drop down action combobox on the list views page.</description>
    <inlineHelpText>The label that is shown in the drop down action combobox on the list views page.</inlineHelpText>
    <label>Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>