force-app/main/default/objects/simpli_lv__List_View_Action__c/fields/simpli_lv__Mass_Create_List_View_Name__c.field-meta.xml
<CustomField>
    <fullName>simpli_lv__Mass_Create_List_View_Name__c</fullName>
    <description>If this action is a Mass Create action then this field holds the list view containing the fields that will be presented to the user. This field is not required. If no value is used the list view the user is currently using will be used.</description>
    <inlineHelpText>If this action is a Mass Create action then this field holds the list view containing the fields that will be presented to the user. This field is not required. If no value is used the list view the user is currently using will be used.</inlineHelpText>
    <label>Mass Create List View Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>