force-app/main/default/objects/simpli_lv__List_View_Action__c/fields/simpli_lv__Object_Type__c.field-meta.xml
<CustomField>
    <fullName>simpli_lv__Object_Type__c</fullName>
    <description>The API name of the object type that this action is associated with. If no type is specified the action is made available to all objects.</description>
    <inlineHelpText>The API name of the object type that this action is associated with. If no type is specified the action is made available to all objects.</inlineHelpText>
    <label>Object Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>