force-app/main/default/objects/simpli_lv__List_View_Action__c/fields/simpli_lv__Permissions__c.field-meta.xml
<CustomField>
    <fullName>simpli_lv__Permissions__c</fullName>
    <description>Identifies the permissions on the object that are required in order to complete the action. This is purely a hint to identify whether the actions should be displayed to the user on the page. It does not control object permissions.</description>
    <inlineHelpText>Identifies the permissions on the object that are required in order to complete the action. This is purely a hint to identify whether the actions should be displayed to the user on the page. It does not control object permissions.</inlineHelpText>
    <label>Permissions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Read</fullName>
            </value>
            <value>
                <fullName>Create</fullName>
            </value>
            <value>
                <fullName>Edit</fullName>
            </value>
            <value>
                <fullName>Delete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>