force-app/main/default/objects/simpli_lv__List_View_Action__c/fields/simpli_lv__Primary_Key__c.field-meta.xml
<CustomField>
    <fullName>simpli_lv__Primary_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>The primary key of the action. This is a concatenation of the action object and the action label. This key is created when inserting an action and is used internally. Do not update this field manually.</description>
    <inlineHelpText>The primary key of the action. This is a concatenation of the action object and the action label. This key is created when inserting an action and is used internally. Do not update this field manually.</inlineHelpText>
    <label>Primary Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>