force-app/main/default/objects/simpli_lv__List_View_Action__c/fields/simpli_lv__Selected_Record_Visibility__c.field-meta.xml
<CustomField>
    <fullName>simpli_lv__Selected_Record_Visibility__c</fullName>
    <defaultValue>&quot;Always displayed&quot;</defaultValue>
    <description>Indicates how many records need to be selected on a list view before the action becomes available.</description>
    <inlineHelpText>Indicates how many records need to be selected on a list view before the action becomes available.</inlineHelpText>
    <label>Selected Record Visibility</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Always displayed</fullName>
            </value>
            <value>
                <fullName>Displayed if multiple records are selected</fullName>
            </value>
            <value>
                <fullName>Displayed if no records are selected</fullName>
            </value>
            <value>
                <fullName>Displayed if one or more records are selected</fullName>
            </value>
            <value>
                <fullName>Displayed if one record is selected</fullName>
            </value>
            <value>
                <fullName>Displayed if zero or one record is selected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>