force-app/main/default/objects/simpli_lv__List_View_Action__c/fields/simpli_lv__Subtype__c.field-meta.xml
<CustomField>
    <fullName>simpli_lv__Subtype__c</fullName>
    <description>Indicates whether the action should only be displayed for specific list view types.</description>
    <inlineHelpText>Indicates whether the action should only be displayed for specific list view types.</inlineHelpText>
    <label>Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Tooling</fullName>
            </value>
            <value>
                <fullName>Metadata</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>