force-app/main/default/objects/simpli_lv__List_View_Action__c/recordTypes/simpli_lv__Core.recordType-meta.xml
<RecordType>
    <fullName>simpli_lv__Core</fullName>
    <active>true</active>
    <description>Indicates the action is for SFDC core list views</description>
    <label>Core</label>
</RecordType>