force-app/main/default/objects/simpli_lv__List_View_Action__c/recordTypes/simpli_lv__Custom.recordType-meta.xml
<RecordType>
    <fullName>simpli_lv__Custom</fullName>
    <active>true</active>
    <description>Indicates the action is for custom list views</description>
    <label>Custom</label>
</RecordType>