force-app/main/default/objects/simpli_lv__List_View_Action__c/listViews/simpli_lv__All_Is_Hyperlink.listView-meta.xml
<ListView>
    <fullName>simpli_lv__All_Is_Hyperlink</fullName>
    <columns>NAME</columns>
    <columns>simpli_lv__Label__c</columns>
    <columns>simpli_lv__Selected_Record_Visibility__c</columns>
    <columns>simpli_lv__Apex_Class_Name__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>simpli_lv__Object_Type__c</columns>
    <columns>simpli_lv__Is_Active__c</columns>
    <columns>simpli_lv__Permissions__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>simpli_lv__Primary_Key__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>simpli_lv__Is_Hyperlink__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All - Is Hyperlink</label>
</ListView>